[gd_scene load_steps=2 format=3 uid="uid://ba88pveys5dwi"]

[ext_resource type="Script" path="res://user_interface/character_creator.gd" id="1_iy3u1"]

[node name="CharacterCreator" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_iy3u1")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0823529, 0.0823529, 0.101961, 1)

[node name="MarginContainer" type="MarginContainer" parent="ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_bottom = 50

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_constants/separation = 20

[node name="Label" type="Label" parent="ColorRect/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Character Creator"

[node name="Separator" type="MarginContainer" parent="ColorRect/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 20

[node name="Name" type="HBoxContainer" parent="ColorRect/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="Label" type="Label" parent="ColorRect/MarginContainer/VBoxContainer/Name"]
visible = false
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Name:"

[node name="LineEdit" type="LineEdit" parent="ColorRect/MarginContainer/VBoxContainer/Name"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Name"

[node name="ClassSelection" type="HBoxContainer" parent="ColorRect/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="LeftArrow" type="Button" parent="ColorRect/MarginContainer/VBoxContainer/ClassSelection"]
layout_mode = 2
text = "<--"

[node name="ScrollContainer" type="ScrollContainer" parent="ColorRect/MarginContainer/VBoxContainer/ClassSelection"]
layout_mode = 2
size_flags_horizontal = 3
horizontal_scroll_mode = 3
vertical_scroll_mode = 0

[node name="HBoxContainer" type="HBoxContainer" parent="ColorRect/MarginContainer/VBoxContainer/ClassSelection/ScrollContainer"]
layout_mode = 2
size_flags_vertical = 6
theme_override_constants/separation = 0

[node name="Knight" type="Label" parent="ColorRect/MarginContainer/VBoxContainer/ClassSelection/ScrollContainer/HBoxContainer"]
custom_minimum_size = Vector2(202, 0)
layout_mode = 2
text = "Knight"
horizontal_alignment = 1

[node name="Archer" type="Label" parent="ColorRect/MarginContainer/VBoxContainer/ClassSelection/ScrollContainer/HBoxContainer"]
custom_minimum_size = Vector2(86, 0)
layout_mode = 2
text = "Archer"
horizontal_alignment = 1

[node name="Mage" type="Label" parent="ColorRect/MarginContainer/VBoxContainer/ClassSelection/ScrollContainer/HBoxContainer"]
custom_minimum_size = Vector2(86, 0)
layout_mode = 2
size_flags_horizontal = 4
text = "Mage"
horizontal_alignment = 1

[node name="RightArrow" type="Button" parent="ColorRect/MarginContainer/VBoxContainer/ClassSelection"]
layout_mode = 2
text = "-->"

[node name="Start" type="Button" parent="ColorRect/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_type_variation = &"SquareButton"
text = "Start"

[node name="Exit" type="Button" parent="ColorRect/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 10
theme_type_variation = &"SquareButton"
text = "Return To Menu"

[connection signal="text_changed" from="ColorRect/MarginContainer/VBoxContainer/Name/LineEdit" to="." method="_on_line_edit_text_changed"]
[connection signal="pressed" from="ColorRect/MarginContainer/VBoxContainer/ClassSelection/LeftArrow" to="." method="_on_left_arrow_pressed"]
[connection signal="pressed" from="ColorRect/MarginContainer/VBoxContainer/ClassSelection/RightArrow" to="." method="_on_right_arrow_pressed"]
[connection signal="pressed" from="ColorRect/MarginContainer/VBoxContainer/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="ColorRect/MarginContainer/VBoxContainer/Exit" to="." method="_on_exit_pressed"]
